--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,7 +51,7 @@
                                             <input type="password" class="form-control form-control-user"
                                                 id="password" placeholder="ingrese contrase&ntilde;a">
                                         </div>
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                        <a  onclick=iniciarSesion() class="btn btn-primary btn-user btn-block">
                                             Ingresar
                                         </a>
                                         <hr>
@@ -84,6 +84,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
+    <script src="js/login.js"></script>
 
 </body>
 
